text overflow solved

--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@ body{
 .display p{
     display: flex;
     align-items: flex-end;
-    align-items: st;
     padding-right: 10px;
     font-size: 50px;
     height:50px;
@@ -49,6 +48,9 @@ body{
 .button{
     border:4px solid green;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
+
+    font-size: 10px;
+    border-radius: 12px;
 }  
